Adds language parameter to paths
